--- a/configurations.json
+++ b/configurations.json
@@ -29,7 +29,7 @@
                 "timeout": 45,
                 "currency": "USD",
                 "price_list": 7,
-                "enabled": true
+                "enabled": false
             }
         },
         "webhook_secret": "your_webhook_secret",
