--- a/configurations.json
+++ b/configurations.json
@@ -238,36 +238,36 @@
     },    
     "sync": {
         "new_items": {
-            "enabled": true,
+            "enabled": false,
             "interval_minutes": 10,
             "batch_size": 50
         },
         "inventory": {
-            "enabled": true,
+            "enabled": false,
             "interval_minutes": 2,
             "batch_size": 50,
             "locations": ["your_location_id"]
         },
         "item_changes": {
-            "enabled": true,
+            "enabled": false,
             "interval_minutes": 5,
             "batch_size": 50
         },
         "price_changes": {
-            "enabled": true,
+            "enabled": false,
             "interval_minutes": 3,
             "batch_size": 50
         },
 
         "sales": {
             "orders": {
-                "enabled": true,
+                "enabled": false,
                 "interval_minutes": 5,
                 "batch_size": 10,
                 "from_date": "2025-09-10"
             },
             "payment_recovery": {
-                "enabled": true,
+                "enabled": false,
                 "interval_minutes": 15,
                 "batch_size": 50,
                 "from_date": "2025-09-10"
