--- a/configurations.json
+++ b/configurations.json
@@ -261,13 +261,13 @@
 
         "sales": {
             "orders": {
-                "enabled": false,
+                "enabled": true,
                 "interval_minutes": 5,
                 "batch_size": 10,
                 "from_date": "2025-09-10"
             },
             "payment_recovery": {
-                "enabled": false,
+                "enabled": true,
                 "interval_minutes": 15,
                 "batch_size": 50,
                 "from_date": "2025-09-10"
